--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "electron:build": "vite build && electron-builder",
     "build:mac": "vite build && electron-builder --mac --publish always",
     "build:win": "vite build && electron-builder --win --publish always",
-    "build:linux": "vite build && electron-builder --linux --publish always",
-    "release": "vite build && electron-builder --mac --win --linux --publish always",
+    "release": "vite build && electron-builder --mac --win --publish always",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
