Fix Mac build: Disable signing requirements for unsigned release

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"wait-on tcp:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
-    "build:mac": "vite build && electron-builder --mac --publish always",
+    "build:mac": "vite build && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac --publish always",
     "build:win": "vite build && electron-builder --win --publish always",
-    "release": "vite build && electron-builder --mac --win --publish always",
+    "release": "vite build && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac --win --publish always",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
