--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"wait-on tcp:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
+    "electron:rebuild": "electron-rebuild",
     "build:mac": "vite build && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac --publish always",
     "build:win": "vite build && electron-builder --win --publish always",
     "release": "vite build && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac --win --publish always",
