Simplify build: Focus on Mac only, fix postinstall

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,12 +7,7 @@ on:
 
 jobs:
   release:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, windows-latest]
+    runs-on: macos-latest
 
     steps:
       - name: Check out Git repository
@@ -25,26 +20,15 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Rebuild native modules
-        run: npm run electron:rebuild || npx electron-builder install-app-deps
+        # npm ci runs 'postinstall' automatically, which triggers 'electron-builder install-app-deps'
 
       - name: Build Electron app (Mac)
-        if: matrix.os == 'macos-latest'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm run build:mac
 
-      - name: Build Electron app (Windows)
-        if: matrix.os == 'windows-latest'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          npm run build:win
-
       - name: Upload artifacts (Mac)
-        if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v4
         with:
           name: mac-installers
@@ -52,15 +36,6 @@ jobs:
             release/*.dmg
             release/*.zip
             release/latest-mac.yml
-
-      - name: Upload artifacts (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-installers
-          path: |
-            release/*.exe
-            release/latest.yml
 
   publish:
     needs: release
@@ -82,7 +57,5 @@ jobs:
           prerelease: false
           files: |
             mac-installers/*
-            windows-installers/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
