--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screenplay-ai",
-  "version": "1.4.9",
+  "version": "1.4.10",
   "description": "AI-powered screenplay writing desktop application",
   "private": true,
   "author": "Screenplay AI",
@@ -25,6 +25,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@monaco-editor/react": "^4.6.0",
+    "@tailwindcss/typography": "^0.5.19",
     "better-sqlite3": "^9.2.2",
     "blob-stream": "^0.1.3",
     "chokidar": "^3.5.3",
@@ -40,6 +41,7 @@
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "recharts": "^2.10.3",
+    "remark-gfm": "^4.0.1",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
